Remove MacOS from traffic annotations

- Don't build traffic_annotation_auditor on MacOS.
- Remove "mac" from the "os_list" everywhere in annotations.xml.
- Add a warning and fail on buildbots when an unsupported platform is
  added in annotations.xml.

Bug: 878760
Change-Id: I7329e8ca2940880cdc4aa357acd42b2976d9a80e
Reviewed-on: https://chromium-review.googlesource.com/c/1287097
Reviewed-by: Ramin Halavati <rhalavati@chromium.org>
Reviewed-by: John Budorick <jbudorick@chromium.org>
Commit-Queue: Nicolas Ouellet-Payeur <nicolaso@chromium.org>
Cr-Commit-Position: refs/heads/master@{#601147}
Former-commit-id: 0d23b5cf0da7631e2d9d4bf53ea4baf48a51c330