tools/traffic_annotation/auditor/auditor_result.h
@@ -46,6 +46,7 @@ class AuditorResult {
                                    // list expresssion.
     ERROR_ANNOTATIONS_XML_UPDATE,  // Annotations XML requires update.
     ERROR_TEST_ANNOTATION,         // Annotation for tests is used.
+    ERROR_INVALID_OS,              // Invalid 'os_list' in annotations.xml
   };
 
   static const int kNoCodeLineSpecified;
